scrollbar fix

--- a/FF1Blazorizer/wwwroot/css/site.css
+++ b/FF1Blazorizer/wwwroot/css/site.css
@@ -138,7 +138,7 @@ h4 {
 
 .checkbox-cell {
     white-space: nowrap;
-    overflow-x: hidden;
+    overflow: hidden;
     min-height: 20px;
     margin: 0;
     padding: 0;
